--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <!--<select id="selDataset"></select>-->
-          <select id="dropdownMenu">
-            <option value="dataset1">DataSet1</option>
-            <option value="dataset2">DataSet2</option>
-          </select>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
@@ -52,7 +48,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+  <script src="plots.js"></script>
 
 </body>
 
