--- a/index.html
+++ b/index.html
@@ -34,14 +34,20 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <script src="data.js"></script>
+        <script src="charts.js"></script>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
+        <script src="data.js"></script>
+        <script src="charts.js"></script>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
+        <script src="data.js"></script>
+        <script src="charts.js"></script>
       </div>
     </div>
   </div>
