--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<body>
-
+<body style="background-color:rgb(45, 65, 241);">
+  <body>
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
