--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p> <h4>The interactive dashboard and charts shows different bacterias collected from the volunteers. Selecting th id. will show you in different graphs the data anlysis for it. Enjoy! 
+          </h4> </p>
+      </div>
+      </div>
       <div class="col-md-5">
         <div id="bar"></div>
         <script src="data.js"></script>
